...
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskStateSpinner"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/taskTileEditText"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="My Task"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />
...
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="203dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8A8787"
        android:ems="10"
        android:inputType="text"
        android:text="Do Something"
        android:textColor="@color/black"
        android:textColorHint="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTileEditText"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="62dp"
        android:layout_height="37dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="14dp"
        android:adjustViewBounds="false"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#03A8F2"
        android:backgroundTintMode="src_in"
        android:baselineAlignBottom="false"
        android:contentDescription="Back"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:backgroundTint="#BA0F0F"
        android:text="@string/save"
        android:textColor="@color/white"
...
